--- a/static/data/schedule.yaml
+++ b/static/data/schedule.yaml
@@ -106,30 +106,51 @@ schedule:
     - start: 2024-04-18:09.00
       end: 2024-04-18:15.00
       breaks:
-        - start: 2024-04-17:12.00
-          end: 2024-04-17:12.45
+        - start: 2024-04-18:10.00
+          end: 2024-04-18:10.20
+          title: 20 minutter pause
+        - start: 2024-04-18:11.15
+          end: 2024-04-18:11.25
+          title: 10 minutters pause
+        - start: 2024-04-18:12.00
+          end: 2024-04-18:12.45
           title: Lunsj
-        - start: 2024-04-17:13.30
-          end: 2024-04-17:13.50
-          title: 20 minutters pause
+        - start: 2024-04-18:13.45
+          end: 2024-04-18:13.55
+          title: 10 minutters pause          
+        - start: 2024-04-18:14.40
+          end: 2024-04-18:14.50
+          title: 10 minutters pause          
       tracks:
         - room: Arena
           sessions:
-            - start: 2024-04-17:09.00
-              end: 2024-04-17:11.15
+            - start: 2024-04-18:09.00
+              end: 2024-04-18:10.00
               title: DNB
               speaker: Yngvar
-            - start: 2024-04-17:11.15
-              end: 2024-04-17:12.00
+            - start: 2024-04-18:10.20
+              end: 2024-04-18:10.50
               title: Utvikling i og med klinikken
               speaker: Bifrost
+            - start: 2024-04-18:10.50
+              end: 2024-04-18:11.15
+              title: Journalen på 18 minutter
+              speaker: Øystein Olsen
+            - start: 2024-04-18:11.25
+              end: 2024-04-18:12.00
+              title: Erfaringer med CoPilot
+              speaker: Askar og Bjørn F
         - room: Hinnøya
           sessions:
-            - start: 2024-04-17:12.45
-              end: 2024-04-17:13.30
+            - start: 2024-04-18:12.45
+              end: 2024-04-18:13.30
               title: Asynkrone events
               speaker: Team Backbone
-            - start: 2024-04-17:15.10
-              end: 2024-04-17:15.55
+            - start: 2024-04-18:15.10
+              end: 2024-04-18:15.55
               title: Erfaringer fra SMUD
-              speaker: Per Arne Engstad         
+              speaker: Per Arne Engstad
+        - room: Kantina
+          sessions:
+        - room: Klasserom    
+          sessions:
