--- a/static/data/schedule.yaml
+++ b/static/data/schedule.yaml
@@ -23,11 +23,11 @@ schedule:
           sessions:
             - start: 2024-04-17:11.00
               end: 2024-04-17:11.15
-              title: Åpning
+              title: Velkommen
               speaker: Thomas Smedsrud
             - start: 2024-04-17:11.15
               end: 2024-04-17:12.00
-              title: Keynote
+              title: Keynote - System of systems
               speaker: Jon Gjengset
             - start: 2024-04-17:12.45
               end: 2024-04-17:13.30
@@ -36,10 +36,10 @@ schedule:
             - start: 2024-04-17:13.50
               end: 2024-04-17:14.50
               title: Testing i HSØ
-              speaker: Camilla Brynhildsen og Marius Emilson Holmesland fra Sykehuspartner   
+              speaker: Camilla Brynhildsen og Marius Emilson Holmesland, Sykehuspartner   
             - start: 2024-04-17:15.10
               end: 2024-04-17:15.55
-              title: Transformasjon- hva kan DIPS lære av andre virksomheter?
+              title: Transformasjon - hva kan DIPS lære av andre virksomheter?
               speaker: Trond Fredrik Schjander-Opsahl og Agnete Enga
             - start: 2024-04-17:16.15
               end: 2024-04-17:16.45
@@ -57,7 +57,8 @@ schedule:
           sessions:
             - start: 2024-04-17:12.45
               end: 2024-04-17:13.30
-              title: Asynkrone events
+              title: Asynkrone events fra Backbone
+              description: Hvordan omsette hendelser i databasen til asynkrone events.
               speaker: Team Backbone
             - start: 2024-04-17:15.10
               end: 2024-04-17:15.55
@@ -65,7 +66,7 @@ schedule:
               speaker: Per Arne Engstad 
             - start: 2024-04-17:16.15
               end: 2024-04-17:17.15
-              title: "Ønskereprise: AT-roadshow"
+              title: Referansearkitektur Q&A
               speaker: AT-styret
         - room: Kantina
           sessions:
@@ -126,12 +127,12 @@ schedule:
           sessions:
             - start: 2024-04-18:09.00
               end: 2024-04-18:10.00
-              title: DNB
-              speaker: Yngvar
+              title: Apocalypse now?
+              speaker: Yngvar Ugland, DNB
             - start: 2024-04-18:10.20
               end: 2024-04-18:10.50
-              title: Utvikling i og med klinikken
-              speaker: Bifrost
+              title: Bifrost som innovasjonsprosjekt
+              speaker: Bjørn Næss og Morten Hørthe
             - start: 2024-04-18:10.50
               end: 2024-04-18:11.15
               title: Journalen på 18 minutter
@@ -139,18 +140,78 @@ schedule:
             - start: 2024-04-18:11.25
               end: 2024-04-18:12.00
               title: Erfaringer med CoPilot
-              speaker: Askar og Bjørn F
+              speaker: Askar Mehdi og Bjørn Fjukstad
+            - start: 2024-04-18:12.45
+              end: 2024-04-18:13.15
+              title: Innsikt i programvaren din med metrikker
+              speaker: Trond Andersen
+            - start: 2024-04-18:13.15
+              end: 2024-04-18:13.45
+              title: "\"The Hammy Project\" - en UX casestudie"
+              speaker: Julie Amalie Karlsen
+            - start: 2024-04-18:13.55
+              end: 2024-04-18:14.40
+              title: Arena og web
+              speaker: Trond Fredrik Schjander-Opsahl
+            - start: 2024-04-18:14.50
+              end: 2024-04-18:15.30
+              title: Nina Kramer
+              speaker: Nina Kramer, Nord universitet
+            - start: 2024-04-18:15.30
+              end: 2024-04-18:15.45
+              title: Avslutning
+              speaker: d:exchange-komiteen
         - room: Hinnøya
           sessions:
+            - start: 2024-04-18:10.20
+              end: 2024-04-18:11.15
+              title: Automatisert testing av UU, linting og Cypress
+              speaker: Cecilie Haugstvedt, Soco
+            - start: 2024-04-18:11.25
+              end: 2024-04-18:12.00
+              title: Automatisert testing av UU, linting og Cypress forts.
+              speaker: Cecilie Haugstvedt, Soco
             - start: 2024-04-18:12.45
-              end: 2024-04-18:13.30
-              title: Asynkrone events
-              speaker: Team Backbone
-            - start: 2024-04-18:15.10
-              end: 2024-04-18:15.55
-              title: Erfaringer fra SMUD
-              speaker: Per Arne Engstad
+              end: 2024-04-18:13.45
+              title: Figmakurs
+              speaker: Lisa Haugen
+            - start: 2024-04-18:13.55
+              end: 2024-04-18:14.40
+              title: Aktiv lytting
+              speaker: Natalie Jonkers
         - room: Kantina
           sessions:
+            - start: 2024-04-18:10.10
+              end: 2024-04-18:10.35
+              title: Web og OpenTelemetry
+              speaker: Trond Andersen
+            - start: 2024-04-18:10.35
+              end: 2024-04-18:11.15
+              title: Web Sockets / SignalR
+              speaker: Øystein Danielsen
+            - start: 2024-04-18:12.30
+              end: 2024-04-18:13.45
+              title: React golden path
+              speaker: Martin Vassbotten
+            - start: 2024-04-18:13.55
+              end: 2024-04-18:14.40
+              title: Avhengigheter i databasen
+              speaker: Anders Skyrud Jensen
         - room: Klasserom    
           sessions:
+            - start: 2024-04-18:10.20
+              end: 2024-04-18:11.15
+              title: Et ord er verd tusen tall – ord- og dokumentvektorer
+              speaker: Jørgen Aarmo Lund
+            - start: 2024-04-18:11.25
+              end: 2024-04-18:12.00
+              title: Et ord er verd tusen tall – ord- og dokumentvektorer forts.
+              speaker: Jørgen Aarmo Lund        
+            - start: 2024-04-18:12.45
+              end: 2024-04-18:13.45
+              title: Hvordan kan bruk av AI og smartteknologi effektivisere arbeidsoppgaver til sykehuspersonell?  
+              speaker: Lillian Ersoy
+            - start: 2024-04-18:13.55
+              end: 2024-04-18:14.40
+              title: Hvordan kan bruk av AI og smartteknologi effektivisere arbeidsoppgaver til sykehuspersonell? forts.
+              speaker: Lillian Ersoy
