--- a/static/data/schedule.yaml
+++ b/static/data/schedule.yaml
@@ -1,7 +1,7 @@
 schedule:  
   days: 
     - start: 2024-04-17:11.00
-      end: 2024-04-17:18.00
+      end: 2024-04-17:20.00
       breaks:
         - start: 2024-04-17:12.00
           end: 2024-04-17:12.45
@@ -18,6 +18,9 @@ schedule:
         - start: 2024-04-17:17.15
           end: 2024-04-17:17.30
           title: 20 minutters pause
+        - start: 2024-04-17:18.15
+          end: 2024-04-17:20.00
+          title: Middag
       tracks:
         - room: Arena
           sessions:
