--- a/static/data/schedule.yaml
+++ b/static/data/schedule.yaml
@@ -83,11 +83,9 @@ schedule:
             - start: 2024-04-17:12.45
               end: 2024-04-17:13.30
               title: Eventyr i Eventland
-              ingress: Vi i Team Backbone deler vår erfaring med å publisere asynkrone eventer basert på databsehendelser. For å komme frem til løsningen har vi vært gjennom en prosess, der arkitektur og løsningsforslag har endret seg underveis. 
+              ingress: Vi i Team Backbone deler vår erfaring med å publisere asynkrone meldinger basert på databasehendelser. For å komme frem til løsningen har vi vært gjennom en prosess, der arkitektur og løsningsforslag har endret seg underveis. 
               description: |
-                Vi har hatt løpende dialog med konsumenter, arkitekter og AT-styre. I dette foredraget forteller vi om de sentrale problemstillingene og beslutningene. Målet er å dele og diskutere våre erfaringer.
-
-                Asynkrone meldinger blir en kritisk del av arkitekturen til DIPS fremover. Vi bør ha en tydelig best practice, slik at team både kan lytte til og publisere meldinger uten å finne opp hjulet på nytt. Eventer som ikke kommer frem kan føre til alvorlige feil i systemet, så det er enormt viktig at vi har trygge mekanismer for dette. Nå har Backbone vært gjennom en reise på dette området, og da tror vi det gir verdi å dele dette med resten av bedriften.
+                Vi har hatt løpende dialog med konsumenter, arkitekter og AT-styre. I dette foredraget forteller vi om de sentrale problemstillingene og beslutningene. Målet er å dele og diskutere våre erfaringer. Asynkrone meldinger blir en kritisk del av arkitekturen til DIPS fremover. Vi bør ha en tydelig best practice, slik at team både kan lytte til og publisere meldinger uten å finne opp hjulet på nytt. Meldinger som ikke kommer frem kan føre til alvorlige feil i systemet, så det er enormt viktig at vi har trygge mekanismer for dette. Nå har Backbone vært gjennom en reise på dette området, og da tror vi det gir verdi å dele dette med resten av bedriften.
               speaker: Team Backbone
             - start: 2024-04-17:15.10
               end: 2024-04-17:15.55
@@ -129,20 +127,20 @@ schedule:
                 Beskrivelse av modellen og hvorfor det er viktig å forstå denne. Ved pasientsammenslåing kan én person få flere ulike proxyguid'er. Dersom koden ikke tar høyde for dette kan det føre til at brukeren går glipp av viktig informasjon om en pasient.
 
                 Feil på dette området er vanskelig å oppdage, og kan ha alvorlige konsekvenser.
-              speaker: Helene Brinchmann Halvorsen
+              speaker: Helene Brinchmann Halvorsen            
             - start: 2024-04-17:13.50
               end: 2024-04-17:14.50
               title: Verdi og brukervennlighet
-              speaker: Ove Dalen
+              speaker: Ove Dalen  
             - start: 2024-04-17:15.10
-              end: 2024-04-17:15.55
-              title: Failure - plug and play. Right way to get it wrong.
-              ingress: Go through the process of learning from failure step-by-step.
-              description: |                
-                Working with complex solutions in an uncertain environment, failure becomes a natural part of the work process. It is important to know how to turn challenges into opportunities.
-              speaker: Alexandra Bieliei
-            - start: 2024-04-17:16.15
-              end: 2024-04-17:16.40
+              end: 2024-04-17:16.25
+              title: React golden path
+              ingress: Workshop om hvordan komme i gang med utvikling i React på en rask og god måte
+              description: |
+                Kunnskapsdeling er alltid viktig. Spesielt nå som DIPS skal ut på web. Da er det kritisk at man bygger webkunnskapen i firmaet samt danner et fagmiljø som holder kunnskapsdelingen gående
+              speaker: Martin Vassbotten          
+            - start: 2024-04-17:16.45
+              end: 2024-04-17:17.15
               title: Taleassistent
               ingress: Bruk av open-source talemodell for diktering og talestyring i Arena.
               description: |
@@ -164,7 +162,7 @@ schedule:
               title: Asynkrone integrasjoner forts.
               speaker: Øyvind Røed Lynne
     - start: 2024-04-18:09.00
-      end: 2024-04-18:15.00
+      end: 2024-04-18:16.00
       breaks:
         - start: 2024-04-18:10.00
           end: 2024-04-18:10.20
@@ -180,7 +178,10 @@ schedule:
           title: 10 minutters pause          
         - start: 2024-04-18:14.40
           end: 2024-04-18:14.50
-          title: 10 minutters pause          
+          title: 10 minutters pause
+        - start: 2024-04-18:15.45
+          end: 2024-04-18:16.00
+          title: Hjemreise         
       tracks:
         - room: Arena
           sessions:
@@ -307,13 +308,13 @@ schedule:
 
                 Kundene forventer en bedre brukeropplevelse og at vi løser nye problemer. Dette betyr av og til krav sanntidskommunikasjon og liveoppdateringer. Målet er å vise deg hvor enkelt det er å implementere liveoppdateringer uten noe særlig ekstra kode.
               speaker: Øystein Danielsen
-            - start: 2024-04-18:12.30
+            - start: 2024-04-18:12.45
               end: 2024-04-18:13.45
-              title: React golden path
-              ingress: Workshop om hvordan komme i gang med utvikling i React på en rask og god måte
-              description: |
-                Kunnskapsdeling er alltid viktig. Spesielt nå som DIPS skal ut på web. Da er det kritisk at man bygger webkunnskapen i firmaet samt danner et fagmiljø som holder kunnskapsdelingen gående
-              speaker: Martin Vassbotten
+              title: Failure - plug and play. Right way to get it wrong.
+              ingress: Go through the process of learning from failure step-by-step.
+              description: |                
+                Working with complex solutions in an uncertain environment, failure becomes a natural part of the work process. It is important to know how to turn challenges into opportunities.
+              speaker: Alexandra Bieliei            
             - start: 2024-04-18:13.55
               end: 2024-04-18:14.40
               title: Avhengigheter i databasen
