--- a/static/data/schedule.yaml
+++ b/static/data/schedule.yaml
@@ -288,7 +288,7 @@ schedule:
                 Den vil for det meste bestå av praktiske øvelser. (Maks 30 pers - 10 grupper med tre personer i hver)
 
                 Brukervennlighet er en del av strategien vår i DIPS. For å lage brukervennlige løsninger trenger vi å lytte godt til sluttbrukere og til våre kunder. Det vil bidra til å forstå deres perspektiver og konkrete behov inn i produktutviklingen. Derfor håper jeg at flere er interesserte i å få noen aktiv lytting-teknikker inn i verktøykassen sin.
-              speaker: Natalie Jonkers
+              speaker: Nathalie Jonkers
         - room: Kantina
           sessions:
             - start: 2024-04-18:10.10
