--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 	"dependencies": {
 		"@square/svelte-store": "^1.0.18",
 		"js-yaml": "^4.1.0",
+		"marked": "^12.0.1",
 		"moment": "^2.30.1"
 	}
 }
