--- a/static/data/schedule.yaml
+++ b/static/data/schedule.yaml
@@ -117,16 +117,16 @@ schedule:
         - room: Kantina
           sessions:
             - start: 2024-04-17:12.45
-              end: 2024-04-17:13.00
-              title: Late diffusjonsmodeller
+              end: 2024-04-17:13.05
+              title: Diffusjonsmodeller er late
               ingress: Diffusjonsmodeller har den merkelige... 
               description: |
                 egenskapen at de gjør den minste mengden arbeid som er nødvendig for å nå målet sitt. Dette kan vi utnytte for å få et innblikk i deres beslutningsevne og skjønne hvorfor visse data blir generert. 
 
                 Lyntalen trår i stor grad utenfor domenet til DIPS. Likevel kan det være interessant å se hvordan moderne generativ AI innen maskinsyn fungerer. 
               speaker: William Dalheim
-            - start: 2024-04-17:13.15
-              end: 2024-04-17:13.30
+            - start: 2024-04-17:13.05
+              end: 2024-04-17:13.25
               title: Personproxy i databasen
               ingress: Hva alle utviklere må vite om personproxy
               description: |
