--- a/static/data/schedule.yaml
+++ b/static/data/schedule.yaml
@@ -333,10 +333,8 @@ schedule:
             - start: 2024-04-18:10.20
               end: 2024-04-18:11.15
               title: Et ord er verd tusen tall – ord- og dokumentvektorer
-              ingress:
+              ingress: En av de grunnleggende idéene bak ChatGPT og AI-basert tekstbehandling er å kunne behandle tekst i vektorform – ved å lage en framstilling av tekstene i tallform, kan vi begynne å sammenligne, kategorisere og gruppere dem.
               description: | 
-                En av de grunnleggende idéene bak ChatGPT og AI-basert tekstbehandling er å kunne behandle tekst i vektorform – ved å lage en framstilling av tekstene i tallform, kan vi begynne å sammenligne, kategorisere og gruppere dem.
- 
                 I denne workshopen gir vi en kort oppsummering av disse teknikkene, ser på hvordan vi kan implementere disse selv, og oppsummerer erfaringene våre fra Team Kamel.
               speaker: Jørgen Aarmo Lund
             - start: 2024-04-18:11.25
