--- a/static/data/schedule.yaml
+++ b/static/data/schedule.yaml
@@ -82,7 +82,7 @@ schedule:
             - start: 2024-04-17:17.30
               end: 2024-04-17:18.15
               title: FK Bodø/Glimt og bedriftskultur – ‘Ingenting er klin kokos umulig’
-              ingress: Fotball og bedriftskultur
+              ingress: Bodø Glimt har gått fra å være en klubb som kjempet for å holde seg i eliteserien til å vinne seriegull tre ganger, spille to cup-finaler og konkurrere i Europa. Frode Thomassen tar oss med på reisen - med stikkord som kultur, prestasjoner og bærekraft.
               description: | 
                 Han er daglig leder i FK Bodø/Glimt og har hatt denne stillingen siden sommeren 2017. I fotballsammenheng har han mange år som styremedlem, nestleder og styreleder i Glimt. Han har vært trener på alle nivå, også i damefotballen. Han har også erfaring fra andre klubber som Ski- og fotballklubben Lyn, Stabæk og Vålerenga. Utover dette har han arbeidet 13-14 år som fakultetsdirektør ved Nord universitet, og før det igjen 9-10 år i Kulturdepartementet, hvor han arbeidet den siste perioden som underdirektør.
               speaker: Frode Thomassen              
