--- a/static/data/schedule.yaml
+++ b/static/data/schedule.yaml
@@ -33,12 +33,19 @@ schedule:
                 Vi gleder oss til to dager med deling av kunnskap fra både interne og eksterne.
             - start: 2024-04-17:11.15
               end: 2024-04-17:12.00
-              title: Keynote - System of systems
-              ingress: Jon skal presentere verdien av å bruke standardiserte grensesnitt for å maksimalisere fleksibilitet. 
+              title: Keynote - Hva vi kan lære av LEGO om API'er?
+              ingress: | 
+                All programvare starter som én linje kode. Over tid bygger vi på litt 
+                etter litt for å legge til funksjonalitet, helt til vi flere år senere 
+                sitter igjen med en enorm monolitt som er vanskelig å vedlikeholde og 
+                videreutvikle. Denne progresjonen er naturlig, men ikke optimal. Dersom 
+                vi istedenfor bygger programvare som mindre systemer integrert gjennom
+                dedikerte grensesnitt gir vi oss selv, og våre kunder, mer 
+                fleksibilitet, bedre fremtidssikring, og økt innovasjonspotensiale.
               description: |
-                Han viser også hvordan grensesnitt kan brukes internt for å bygge *systems of systems* slik at man kan bytte ut individuelle underkomponenter. 
-                
-                Gode API-er er også viktig for å kunne skape innovative løsninger og for å kunne integrere seg med eldre systemer.
+                I dette foredraget vil vi se på hvordan LEGO har lyktes med dette i den 
+                fysiske verdenen, og hvilke lærdommer det kan gir oss om 
+                programvareutvikling.
               speaker: Jon Gjengset
             - start: 2024-04-17:12.45
               end: 2024-04-17:13.30
