--- a/static/data/schedule.yaml
+++ b/static/data/schedule.yaml
@@ -394,7 +394,7 @@ schedule:
             - start: 2024-04-18:11.25
               end: 2024-04-18:12.00
               kind: workshop
-              title: Hvordan kan bruk av AI og smartteknologi effektivisere arbeidsoppgaver til sykehuspersonell? forts.
+              title: Helsejournal med din AI «Assistent»  forts.
               speaker: Lillian Ersoy
             - start: 2024-04-18:12.30
               end: 2024-04-18:13.45
